Add 18th's news about CES2021

--- a/_posts/2021-1-01-News-Jan.md
+++ b/_posts/2021-1-01-News-Jan.md
@@ -12,8 +12,10 @@ date: 2021-1-01
   - [UK competition watchdog to probe Nvidia's Arm takeover](#uk-competition-watchdog-to-probe-nvidias-arm-takeover)
   - [Apple, Hyundai set to agree electric car tie-up, says Korea IT News](#apple-hyundai-set-to-agree-electric-car-tie-up-says-korea-it-news)
   - [Father of the Web Tim Berners-Lee prepares 'do-over'](#father-of-the-web-tim-berners-lee-prepares-do-over)
+  - [The tech trends seen at CES 2021](#the-tech-trends-seen-at-ces-2021)
   - [- **Who:**](#--who)
   - [- **Who:**](#--who-1)
+  - [- **Who:**](#--who-2)
 <!-- TOC END -->
 
 
@@ -82,8 +84,64 @@ date: 2021-1-01
 - **So?:**  
   - The CEO of Inrupt has signed up Britain’s National Health Service (NHS), the BBC and the government of Flanders in Belgium as pilot customers.
   - It plans on addressing the long-standing problem of incompatible medical records of NHS.
-  - At its core, "the new web" is mostly a set of protocols for how machines talk to each other. Hence, a key aim for Inrupt is to get software developers to write programs for the platform, to actualise the revolution. 
+  - At its core, "the new web" is mostly a set of protocols for how machines talk to each other. Hence, a key aim for Inrupt is to get software developers to write programs for the platform, to actualise the revolution.
 - [Link to the article](https://www.reuters.com/article/us-tech-bernerslee-interview/father-of-the-web-tim-berners-lee-prepares-do-over-idUSKBN29H1JK)
+
+
+#### [January 18th, 2021]
+
+##  The tech trends seen at CES 2021
+- CES shows new trends and technologies that are conceptual, wildly expensive, a long way off in the future, or all of the above.
+- CES shows where the technology is going & what to watch out for.
+- This year they had a lot of Covid-19 related products.
+
+1. **Concept devices**
+  - Concept devices: Some companies have produced something interesting that might turn into a product, or might just stay as an innovative concept.
+  - **Razer Project Hazel Smart mask**
+      - A mask that you could see through, built-in neon lights, a microphone to amplify muffled speech and a wireless charger that cleanses it with UV light between uses.
+      ![image](https://user-images.githubusercontent.com/33334078/104867454-3f732d00-5984-11eb-95e4-63726cd6ae72.png)
+
+  - **GM’s Cadillac electric shuttle **and an autonomous vertical take-off and landing (VTOL) drone
+    - GM used the platform to declare an inflection point for electric cars, offering specifics on its upcoming line-up of vehicles in a five-year $27bn plan to take on the likes of Tesla.
+    ![image](https://user-images.githubusercontent.com/33334078/104867475-4a2dc200-5984-11eb-82a4-837f8e77c2a1.png)
+
+
+2. **Concept cars and screens**
+  - LG's semi-transparent screen - they bend and pull.
+  - Bending screens - LG's **rollable** phone; they are going to make and sell by the end of 2021.
+  ![image](https://user-images.githubusercontent.com/33334078/104867464-4437e100-5984-11eb-8524-e411e78a387a.png)
+
+
+3. **Processors and Laptops**
+  - Companies are coming up with components that could make up gaming laptops that are very very good and interesting.
+  - **Intel**: Trying to develop their Core chips further to fight with Apple's m1 chips, etc.
+  - **AMD**: Announced another generation of ryzen processors which is powerful without completely destroying the battery.
+  - **Nvidia**: Bringing GPUs to gaming laptops that are more powerful (1440p in 90 frame resolution)
+
+4. **TV shows** - Mini LED and OLED
+  - HDMI 2.1 - a little bit more future proof to connect different devices.
+  - High-end TV: mini-led or OLED.
+      - Mini-LED: Light that shines behind the pixels so that it could produce true black like OLED & is more sustainable
+      - LG is the pioneer of this technology.
+  - Smart TV software
+      - Sony is switching to Google-TV
+      - LG has taken the web-OS and made a pretty standard interface
+
+
+- [Link to the video](https://www.theverge.com/2021/1/16/22234287/the-tech-trends-we-saw-kick-off-at-ces-2021)
+- [Link to the article](https://www.ft.com/content/7fda1701-e66c-4844-bdd2-6625f7010003)
+
+
+#### [January 11th, 2021]
+
+##  
+- **Who:**  
+- **What:**  
+- **When:**  
+- **Why:**  
+- **How:**  
+- **So?:**  
+- [Link to the article]()
 
 
 #### [January 11th, 2021]
