Fix the list format

--- a/_posts/2021-1-01-News-Jan.md
+++ b/_posts/2021-1-01-News-Jan.md
@@ -96,36 +96,37 @@ date: 2021-1-01
 - This year they had a lot of Covid-19 related products.
 
 1. **Concept devices**
-  - Concept devices: Some companies have produced something interesting that might turn into a product, or might just stay as an innovative concept.
-  - **Razer Project Hazel Smart mask**
-      - A mask that you could see through, built-in neon lights, a microphone to amplify muffled speech and a wireless charger that cleanses it with UV light between uses.
-      ![image](https://user-images.githubusercontent.com/33334078/104867454-3f732d00-5984-11eb-95e4-63726cd6ae72.png)
+    - Concept devices: Some companies have produced something interesting that might turn into a product, or might just stay as an innovative concept.
+    - **Razer Project Hazel Smart mask**
+        - A mask that you could see through, built-in neon lights, a microphone to amplify muffled speech and a wireless charger that cleanses it with UV light between uses.
 
-  - **GM’s Cadillac electric shuttle **and an autonomous vertical take-off and landing (VTOL) drone
-    - GM used the platform to declare an inflection point for electric cars, offering specifics on its upcoming line-up of vehicles in a five-year $27bn plan to take on the likes of Tesla.
-    ![image](https://user-images.githubusercontent.com/33334078/104867475-4a2dc200-5984-11eb-82a4-837f8e77c2a1.png)
+        ![1](https://user-images.githubusercontent.com/33334078/104867454-3f732d00-5984-11eb-95e4-63726cd6ae72.png)
 
+    - **GM’s Cadillac electric shuttle** and an autonomous vertical take-off and landing (VTOL) drone
+        - GM used the platform to declare an inflection point for electric cars, offering specifics on its upcoming line-up of vehicles in a five-year $27bn plan to take on the likes of Tesla.  
+
+        ![2](https://user-images.githubusercontent.com/33334078/104867475-4a2dc200-5984-11eb-82a4-837f8e77c2a1.png)
 
 2. **Concept cars and screens**
-  - LG's semi-transparent screen - they bend and pull.
-  - Bending screens - LG's **rollable** phone; they are going to make and sell by the end of 2021.
-  ![image](https://user-images.githubusercontent.com/33334078/104867464-4437e100-5984-11eb-8524-e411e78a387a.png)
-
+    - LG's semi-transparent screen - they bend and pull.
+    - Bending screens:  LG's **rollable** phone; they are going to make and sell by the end of 2021.
+    
+    ![3](https://user-images.githubusercontent.com/33334078/104867464-4437e100-5984-11eb-8524-e411e78a387a.png)
 
 3. **Processors and Laptops**
-  - Companies are coming up with components that could make up gaming laptops that are very very good and interesting.
-  - **Intel**: Trying to develop their Core chips further to fight with Apple's m1 chips, etc.
-  - **AMD**: Announced another generation of ryzen processors which is powerful without completely destroying the battery.
-  - **Nvidia**: Bringing GPUs to gaming laptops that are more powerful (1440p in 90 frame resolution)
+    - Companies are coming up with components that could make up gaming laptops that are very very good and interesting.
+    - **Intel**: Trying to develop their Core chips further to fight with Apple's m1 chips, etc.
+    - **AMD**: Announced another generation of ryzen processors which is powerful without completely destroying the battery.
+    - **Nvidia**: Bringing GPUs to gaming laptops that are more powerful (1440p in 90 frame resolution)
 
 4. **TV shows** - Mini LED and OLED
-  - HDMI 2.1 - a little bit more future proof to connect different devices.
-  - High-end TV: mini-led or OLED.
-      - Mini-LED: Light that shines behind the pixels so that it could produce true black like OLED & is more sustainable
-      - LG is the pioneer of this technology.
-  - Smart TV software
-      - Sony is switching to Google-TV
-      - LG has taken the web-OS and made a pretty standard interface
+    - HDMI 2.1 - a little bit more future proof to connect different devices.
+    - High-end TV: mini-led or OLED.
+        - Mini-LED: Light that shines behind the pixels so that it could produce true black like OLED & is more sustainable
+        - LG is the pioneer of this technology.
+    - Smart TV software
+        - Sony is switching to Google-TV
+        - LG has taken the web-OS and made a pretty standard interface
 
 
 - [Link to the video](https://www.theverge.com/2021/1/16/22234287/the-tech-trends-we-saw-kick-off-at-ces-2021)
