24th's news about tech devices being used as covid monitoring

--- a/_posts/2021-1-01-News-Jan.md
+++ b/_posts/2021-1-01-News-Jan.md
@@ -13,9 +13,9 @@ date: 2021-1-01
   - [Apple, Hyundai set to agree electric car tie-up, says Korea IT News](#apple-hyundai-set-to-agree-electric-car-tie-up-says-korea-it-news)
   - [Father of the Web Tim Berners-Lee prepares 'do-over'](#father-of-the-web-tim-berners-lee-prepares-do-over)
   - [The tech trends seen at CES 2021](#the-tech-trends-seen-at-ces-2021)
+  - [Marketing, sports data apps join fight against pandemic](#marketing-sports-data-apps-join-fight-against-pandemic)
   - [- **Who:**](#--who)
   - [- **Who:**](#--who-1)
-  - [- **Who:**](#--who-2)
 <!-- TOC END -->
 
 
@@ -110,7 +110,7 @@ date: 2021-1-01
 2. **Concept cars and screens**
     - LG's semi-transparent screen - they bend and pull.
     - Bending screens:  LG's **rollable** phone; they are going to make and sell by the end of 2021.
-    
+
     ![3](https://user-images.githubusercontent.com/33334078/104867464-4437e100-5984-11eb-8524-e411e78a387a.png)
 
 3. **Processors and Laptops**
@@ -133,16 +133,21 @@ date: 2021-1-01
 - [Link to the article](https://www.ft.com/content/7fda1701-e66c-4844-bdd2-6625f7010003)
 
 
-#### [January 11th, 2021]
+#### [January 24th, 2021]
 
-##  
-- **Who:**  
-- **What:**  
-- **When:**  
+##  Marketing, sports data apps join fight against pandemic
+- **Who:**  Various IT firms - Hitachi-LG Data Storage, Union Tool
+- **What:**  Devices designed for customer marketing improvement and sports performance are now being used to fight against COVID-19 by deploying its technologies.
+  - _3D LiDAR People Counter sensor_ that Hitachi-LG developed is now paired with the application with heat detection to take customers' temperatures and facial detection system to check if customers are wearing a mask.
+  - Union Tool, hopes that its _wearable heart sensor_ (recording heart rate and temperature) could be marketed as a monitoring device for COVID-19 patients at quarantine hotels.
+- **When:**  20th of January, 2021 At the annual [Wearables Expo](https://www.wearable-expo.jp/en-gb.html) in Tokyo.
 - **Why:**  
+  - Because retailers seek to create a **safe environment** and **restore peace of mind** to the in-store experience as fears of infection have driven customers away during the pandemic.
+  - It is also being used in unmanned stores, where the number of it have been increasing due to the pandemic.
 - **How:**  
-- **So?:**  
-- [Link to the article]()
+  _People Counter sensor_ monitors the number of people and their movements to minimize congestion and estimates the wait time. It also determines if a customer has stopped by a specific area - i.e. required hand sanitizer station.
+- **So?:**  Emerging technology and products in the market, are expected to be used as a monitoring device to lower the chance of infection and to restore peace of mind during the pandemic.
+- [Link to the article](https://www.reuters.com/article/us-wearables-expo/marketing-sports-data-apps-join-fight-against-pandemic-idUSKBN29P11D)
 
 
 #### [January 11th, 2021]
