Add 29th's news about zozoglass

--- a/_posts/2021-1-01-News-Jan.md
+++ b/_posts/2021-1-01-News-Jan.md
@@ -14,8 +14,8 @@ date: 2021-1-01
   - [Father of the Web Tim Berners-Lee prepares 'do-over'](#father-of-the-web-tim-berners-lee-prepares-do-over)
   - [The tech trends seen at CES 2021](#the-tech-trends-seen-at-ces-2021)
   - [Marketing, sports data apps join fight against pandemic](#marketing-sports-data-apps-join-fight-against-pandemic)
+  - [How do I look? SoftBank's Zozo offers tech specs to help buyers get skin tone right](#how-do-i-look-softbanks-zozo-offers-tech-specs-to-help-buyers-get-skin-tone-right)
   - [- **Who:**](#--who)
-  - [- **Who:**](#--who-1)
 <!-- TOC END -->
 
 
@@ -150,16 +150,20 @@ date: 2021-1-01
 - [Link to the article](https://www.reuters.com/article/us-wearables-expo/marketing-sports-data-apps-join-fight-against-pandemic-idUSKBN29P11D)
 
 
-#### [January 11th, 2021]
+#### [January 29th, 2021]
 
-##  
-- **Who:**  
-- **What:**  
-- **When:**  
+##  How do I look? SoftBank's Zozo offers tech specs to help buyers get skin tone right
+- **Who:**  Japanese online fashion retailer Zozo Inc
+- **What:**  The company has launched skin tone measuring glasses for ordering cosmetics online, adopting latest fashion technology.
+- **When:**  29th of January, 2021
 - **Why:**  
+  - The company is trying to replicate the traditional experience of going to a large department store to try products on, through technology and give the consumer confidence to buy online.
+  - E-commerce grew at an exceptional speed during the Covid-10 pandemic, and the invention of the Zozoglass allows consumers overcome some reservations about buying remotely.
 - **How:**  
-- **So?:**  
-- [Link to the article]()
+  - "Zozoglass", a pair of spectacles covered with colour swatches and markers, scans the skin tone with a smartphone and provides tailored cosmetics recommendations.
+  - Augmented reality functionality in the online retailer’s app will allow consumers to see how the make-up will look.
+- **So?:**  It will be limited to foundation initially, but will be expanded to cover other product lines.
+- [Link to the article](https://www.reuters.com/article/us-zozo-zozoglass/how-do-i-look-softbanks-zozo-offers-tech-specs-to-help-buyers-get-skin-tone-right-idUSKBN29Y0RC)
 
 
 #### [January 11th, 2021]
