--- a/_posts/2021-1-01-News-Jan.md
+++ b/_posts/2021-1-01-News-Jan.md
@@ -15,7 +15,7 @@ date: 2021-1-01
   - [The tech trends seen at CES 2021](#the-tech-trends-seen-at-ces-2021)
   - [Marketing, sports data apps join fight against pandemic](#marketing-sports-data-apps-join-fight-against-pandemic)
   - [How do I look? SoftBank's Zozo offers tech specs to help buyers get skin tone right](#how-do-i-look-softbanks-zozo-offers-tech-specs-to-help-buyers-get-skin-tone-right)
-  - [- **Who:**](#--who)
+  - [Personal data stolen from Dutch coronavirus track-and-trace programme](#personal-data-stolen-from-dutch-coronavirus-track-and-trace-programme)
 <!-- TOC END -->
 
 
@@ -166,13 +166,14 @@ date: 2021-1-01
 - [Link to the article](https://www.reuters.com/article/us-zozo-zozoglass/how-do-i-look-softbanks-zozo-offers-tech-specs-to-help-buyers-get-skin-tone-right-idUSKBN29Y0RC)
 
 
-#### [January 11th, 2021]
+#### [January 31st, 2021]
 
-##  
-- **Who:**  
-- **What:**  
-- **When:**  
-- **Why:**  
-- **How:**  
-- **So?:**  
-- [Link to the article]()
+##  Personal data stolen from Dutch coronavirus track-and-trace programme
+- **Who:**  People who participated in Netherlands’ coronavirus track-and-trace programme
+- **What:**  Their personal information such as names, addresses, social security numbers, telephone numbers, and test results have been leaked.
+  - The number of people affected has not been identified, but is estimated to be thousands.
+- **When:**  29th of January, 2021
+- **Why:**  The Data leaks were from its core track-and-trace system, and not related to a tracking smartphone app, which has been criticized for its own security issues.
+- **How:**  In one instance, GGD employees targeted the personal information of a small number of prominent individuals, and in another case, an entire data set was leaked and offered for sale online.
+- **So?:**  The public health officials of Netherlands are working closely with the police, justice and data and cybercrime specialists to track down the case and to reinstate country's reputation.
+- [Link to the article](https://www.reuters.com/article/us-health-coronavirus-netherlands-datapr/personal-data-stolen-from-dutch-coronavirus-track-and-trace-programme-idUSKBN29Y1H3)
