Reformat title and structure

--- a/_posts/Data Structures and Algorithms/2021-03-21-kakaoID.md
+++ b/_posts/Data Structures and Algorithms/2021-03-21-kakaoID.md
@@ -1,6 +1,6 @@
 ---
-title: "[파이썬] 카카오 신규 아이디 추천 코드- regex 정규식 사용하기"
-tags: [Data Structures and Algorithms]
+title: "[카카오] 카카오 신규 아이디 추천 코드- regex 정규식 사용하기 (Python)"
+tags: [Data Structures and Algorithms, String]
 categories:
   - Data Structures and Algorithms
 ---
