Add May 3rd's news about AIOps

--- a/_posts/Daily Tech News/2021-05-01-News-May.md
+++ b/_posts/Daily Tech News/2021-05-01-News-May.md
@@ -1,16 +1,15 @@
 ---
-title: "April Technology News"
+title: "May Technology News"
 tags: [Daily Tech News]
 categories:
   - Daily Tech News
-date: 2021-4-01
+date: 2021-05-01
 ---
 
 
-#### [April 12th, 2021]
+#### [May 1st, 2021]
 
 ## Microsoft Makes Big Bet on Health-Care AI Technology With Nuance - Digitizing Healthcare
-
 - **Industry:**  IT & Healthcare
 - **Who:**  Microsoft Corporation and Nuance Communications Inc.
 - **What:**  The company is making a massive bet on **health-care artificial intelligence** by buying Nuance Communications Inc. The price being discussed could value Nuance at about $56 a share.
@@ -29,35 +28,35 @@ date: 2021-4-01
 
 
 
-#### [April 12th, 2021]
+#### [May 3rd, 2021]
 
-##
-- **Industry:**
-- **Who:**
-- **What:**
+## 오케스트로, KETI와 차세대 AI옵스 기술 개발
+- **Industry:** AI
+- **Who:** 오케스트로와 한국전자기술연구원 (KETI)
+- **What:**  두 단체가 협업하여 차세대 AI옵스 (AIOps) 기술 공동 연구에 착수한다.
+  - **AI옵스**는 데이터 과학 및 머신러닝 모델을 사용해 IT 운영관리 팀이 관리 중인 시스템 성능 또는 가용성에 영향을 미치는 문제를 파악할 수 있도록 지원하는 개념이다.
+  - 오케스트로 심포니AI는 클라우드 분야에 적용된 AI옵스 제품이다. 현재 행정안전부, 국방통합데이터센터, 국가정보자원관리원 등이 운영하는 데이터센터들에 적용돼 있다.
 - **When:**
-- **Why:**
-- **How:**
-- **So?:**
+- **Why:** 글로벌 클라우드 기업들과 경쟁에서 우위를 선점하려면 AI옵스 같은 차세대 AI융합기술을 선제적으로 확보해 차별화된 시장경쟁력을 확보하는 것이 중요하기 때문이다
+- **How:**  공동연구를 통해 클라우드 시스템 이상 징후 원인 탐지 기능, 자원 예측 등의 기능에서 글로벌 경쟁력을 확보하는것을 목표로 하고 있다. 또한, 핵심 기술중 일부를 오픈소스화 할것이다.
+- **So?:**  AI옵스는 데이터, 분석 그리고 자동화를 전반적인 서비스 관리부터 성능관리, IT 자동화에서 활용한다. 데이터 수집, 프로세싱, 분석, 시각화, 자동화 툴과 기술등을 포함한다. AIOps 도입을 통해 고객 성과 개선, 디지털 세입 향상, 물류 비용 감소, 신기술의 빠른 개발등이 가능하다.
 - **적용할점**
-  - **직무/자소서 연관성**:
-  - **산업 연관성**:
-- [Link to the article]()
+  - **산업 연관성**: 회사가 AI옵스에 대한 개발의 필요성/ 진행되고 있는 사항이 있는지 조사, 이상탐지, 신기술 개발 등에는 디지털 트윈이라는 기술도 있는데, 그들의 다른점과 도입성과는 어떻게 되는지 리서치
+- [Link to the article](http://www.ddaily.co.kr/news/article/?no=213471)
 
 
-#### [April 12th, 2021]
+#### [May 3rd, 2021]
 
-##
-- **Industry:**
+##  
+- **Industry: **
 - **Who:**
-- **What:**
-- **When:**
-- **Why:**
-- **How:**
-- **So?:**
-- **적용할점**
-  - **직무/자소서 연관성**:
-  - **산업 연관성**:
+- **What:**  
+- **When:**  
+- **Why:**  
+- **How:**  
+- **So?:**  
+- **적용할점**  
+  - **산업 연관성**:  
 - [Link to the article]()
 
 
