Edit and add more about MEC

--- a/_posts/CS Papers/2021-03-22-Papers-6.md
+++ b/_posts/CS Papers/2021-03-22-Papers-6.md
@@ -1,13 +1,19 @@
 ---
-title: "5G기술및 엣지(Edge) 영역에서의 주요 사례"
+title: "5G 기술 및 엣지(Edge) 영역에서의 주요 사례"
 tags: [Edge Computing]
 categories:
   - CS Papers
+date: 2021-03-22
 ---
 
 
 <!-- TOC START min:1 max:3 link:true asterisk:false update:true -->
   - [MEC(Mobile Edge Computing)](#mecmobile-edge-computing)
+  - [DELL Technology의 엣지 솔루션 사례](#dell-technology의-엣지-솔루션-사례)
+  - [엣지 데이터의 특징](#엣지-데이터의-특징)
+  - [5G 시장의 발전 방향 - Telecom/Enterprise](#5g-시장의-발전-방향---telecomenterprise)
+  - [MEC 엣지 컴퓨팅의 장점](#mec-엣지-컴퓨팅의-장점)
+  - [MEC 구축 방식](#mec-구축-방식)
   - [적용사례- 2020년 한국판 디지털 뉴딜 사업 -  5G MEC](#적용사례--2020년-한국판-디지털-뉴딜-사업----5g-mec)
     - [1. 도로 파손 정보 관리 서비스](#1-도로-파손-정보-관리-서비스)
     - [2. 인천공항 방역 서비스 - 로봇](#2-인천공항-방역-서비스---로봇)
@@ -15,7 +21,7 @@ categories:
     - [4. AR 내비게이션](#4-ar-내비게이션)
     - [5. 원격수업](#5-원격수업)
     - [6. 미래 금융 서비스 발굴 - SK텔레콤,신한은행](#6-미래-금융-서비스-발굴---sk텔레콤신한은행)
-  - [References](#references)
+  - [Reference](#reference)
 <!-- TOC END -->
 
 
@@ -25,8 +31,40 @@ categories:
 이 사업의 필수 기술인 MEC(Mobile Edge Computing)는 네트워크의 데이터를 중앙까지 전송하지 않고 서비스 현장에서 처리하는 기술로 데이터 처리단계가 단축됨에 따라 네트워크의 트래픽과 서비스 지연을 감소시키고 보안성을 강화하는 신산업 육성의 핵심 기술이다.
 출처: [매일일보](https://www.m-i.kr/news/articleView.html?idxno=746683)
 
-## 적용사례- 2020년 한국판 디지털 뉴딜 사업 -  5G MEC
+## DELL Technology의 엣지 솔루션 사례
+- 고객사에서 원격으로 잠재적인 사고를 예측하고 예방할 수 있도록 데이터 분석
+- 바다에서 안전한 항해를 위해 네비게이션의 오류를 방지하기 위한 측정, 개선능력 향상
+- 제조업체 생산장비들의 상태를 모니터링하고 미리 문제를 방지할수 있도록함
+- 전체 네트워크에 데이터를 보내지 않고 로컬에서 처리하여 보안 향상
+- 온프레미스에서 대량의 데이터 수집과 분석으로 빠른 의사결정을 가능케 함
 
+
+## 엣지 데이터의 특징
+![Screenshot 2021-05-04 at 10 07 17 pm](https://user-images.githubusercontent.com/33334078/117007936-27ea6500-ad25-11eb-9f54-b4723b8a16b1.png)
+- 엣지를 나누는 방법과 기준 - 운용하는 어플리케이션과 데이터에 따라 far, near, vehicle엣지로 나눌수 있음
+
+## 5G 시장의 발전 방향 - Telecom/Enterprise
+- 통신사업자(의 입장에서는): 이미 가상화 되어있는 코어영역에서 벗어나 MEC로 지역적으로 분산하여 데이터를 관리
+- 무선접속망: 레거시한 무선접속망을 벗어나 하드웨어 가속기능을 탑재한 x86기반의 가상화된 무선접속망인 vRAN 네트워크 가상 기술이 오픈된 방향으로 진행되어 가고있음
+- 클라우드: 엣지클라우드, 멀티 클라우드 등과 같이 발전해나가고 있음
+- 기업사용자: 5G 특징인 대용량 초고속 , 초연결, 초저지연의 특성을 자동화 단말기기, IoT기기 등에 도입할것
+- 일반 소비자: 실시간 스트리밍 게임, ar/vr/ 4k이상의 비디오 시청, 무인 자동차 등의 서비스를 통해 5g서비스를 기대
+
+
+## MEC 엣지 컴퓨팅의 장점
+- 중앙 데이터 센터와 통신 부하를 줄여 빠른 응답시간
+- 5G의 초저지연, 초신뢰성 서비스 제공
+- 다양한 디바이스, 컴퓨팅과 소프트웨어를 이용한 뻐른 서비스 구축
+- 워크로드의 효율적인 분배와 높른 자원 활용과 확장성 제
+- x86분산 배치로 지능적 워크로드 구축과 적절한 용량 할당 가능
+- video CDN, AR/VR, game, 공장 자동화
+
+## MEC 구축 방식
+- 통신사업자의 일반 고객을 대상으로 Distributed edge모델로 전국에 주요 거점도시에 mec서비스를 구축중
+- 퍼블릭 클라우드와의 협업 - 통신사업자의 경우, 클라우드 서비스 제공회사에 장소와 통신망을 제공하여 수익을 얻을 수 있고, 클라우드 사업자들 역시 고객과 가장 가까운 위치에서 서비스를 제공함에 따라 더 높은 충성심과 향후 기업내의 on-premise로 사업을 확대 할수 있는 기회
+
+
+## 적용사례- 2020년 한국판 디지털 뉴딜 사업 -  5G MEC
 - 온라인 소비, 원격근무 등 비대면화가 확산되고 디지털 전환이 가속화 되는 등 경제사회 구조의 전환으로 ‘디지털 역량’의 중요성이 더욱 높아졌으며, 비대면 비즈니스가 유망 산업으로 부각되고 있다.
 - 전 산업의 디지털 혁신을 위해 D.N.A.(Data-Network-AI) 생태계를 강화하고, 교육인프라의 디지털 전환, 비대면 산업 육성, 교통·수자원·도시·물류 등 기반시설의 디지털화를 추진한다.
 1. 국민적 관심이 높은 서비스
@@ -67,7 +105,7 @@ categories:
 
 
 
-## References
+## Reference
 - [광주시-SKT, 5G 도로파손정보 관리서비스 구축](https://www.m-i.kr/news/articleView.html?idxno=746683)
 - [5세대 이동통신 융합서비스로 코로나19 대응한다](https://www.korea.kr/news/policyNewsView.do?newsId=148881618)
 - [SKT-신세계, 스타필드 코엑스에 ‘AR 내비게이션’ 도입한다](https://inthenews.co.kr/news/article.html?no=27745)
