Add Dell and Duos Tech's edge use

--- a/_posts/Daily Tech News/2021-05-01-News-May.md
+++ b/_posts/Daily Tech News/2021-05-01-News-May.md
@@ -6,6 +6,16 @@ categories:
 date: 2021-05-01
 ---
 
+<!-- TOC START min:1 max:3 link:true asterisk:false update:true -->
+  - [Microsoft Makes Big Bet on Health-Care AI Technology With Nuance - Digitizing Healthcare](#microsoft-makes-big-bet-on-health-care-ai-technology-with-nuance---digitizing-healthcare)
+  - [오케스트로, KETI와 차세대 AI옵스 기술 개발](#오케스트로-keti와-차세대-ai옵스-기술-개발)
+  - [Dell Technologies Unlocks Value of Data at the Edge](#dell-technologies-unlocks-value-of-data-at-the-edge)
+  - [- **Industry:**](#--industry)
+  - [- **Industry:**](#--industry-1)
+<!-- TOC END -->
+
+
+
 
 #### [May 1st, 2021]
 
@@ -45,19 +55,23 @@ date: 2021-05-01
 - [Link to the article](http://www.ddaily.co.kr/news/article/?no=213471)
 
 
-#### [May 3rd, 2021]
+#### [May 7th, 2021]
 
-##  
-- **Industry: **
-- **Who:**
-- **What:**  
-- **When:**  
+##  Dell Technologies Unlocks Value of Data at the Edge
+- **Industry:** Edge Computing
+- **Who:**  Dell Technologies
+- **What:** Dell Technologies is unveiling solutions and partnerships designed to extract more value from data at the edge.
+- **When:**  in 2021
 - **Why:**  
-- **How:**  
-- **So?:**  
-- **적용할점**  
-  - **산업 연관성**:  
-- [Link to the article]()
+  - The new offerings are part of the company’s edge strategy to deliver fully integrated technologies that **allow workloads to run and be managed across multiple clouds and applications**.
+  - By putting compute, storage, and analytics where data is created, the data insights ca be delivered in real time and create new opportunities for businesses.
+- **How:**  Integrated with **APEX Private Cloud**, it offers a high-availability edge framework as-a-Service, so companies can virtualize and containerize applications, removing complexity and saving time.
+- **So?:**  Manufacturing customers get a consistent cloud experience and pay only for what they use, and get rapid and accurate analytics.
+- **Case Study: Duos Technologies**
+  - **Duos Technologies** (Nasdaq: DUOT) uses Dell Technologies infrastructure and services to deploy artificial intelligence solutions at the edge.  
+  - Duos Technologies has successfully made **railcar inspections 120-times faster** with first-of-its-kind technology used by major railroads including CSX.
+  - Duos Technologies created the **Railcar Inspection Portal, or rip**, to streamline this process. - - Powered by ruggedized **Dell EMC PowerEdge servers and Dell EMC PowerVault storage** arrays, rip® can inspect in eight minutes more than 120 railcars moving at full speed. These real-time analytics help customers increase safety, enhance maintenance accuracy and reduce costs.
+- [Link to the article](https://www.automation.com/en-us/articles/may-2021/dell-technologies-value-data-edge?listname=Automation%20&%20Control%20News%20&%20Articles)
 
 
 #### [April 12th, 2021]
