Add article about metaverse and why it matters

--- a/_posts/Daily Tech News/2021-05-01-News-May.md
+++ b/_posts/Daily Tech News/2021-05-01-News-May.md
@@ -10,8 +10,8 @@ date: 2021-05-01
   - [Microsoft Makes Big Bet on Health-Care AI Technology With Nuance - Digitizing Healthcare](#microsoft-makes-big-bet-on-health-care-ai-technology-with-nuance---digitizing-healthcare)
   - [오케스트로, KETI와 차세대 AI옵스 기술 개발](#오케스트로-keti와-차세대-ai옵스-기술-개발)
   - [Dell Technologies Unlocks Value of Data at the Edge](#dell-technologies-unlocks-value-of-data-at-the-edge)
+  - ['K-메타버스' 키운다…닻 올린 MZ세대](#k-메타버스-키운다닻-올린-mz세대)
   - [- **Industry:**](#--industry)
-  - [- **Industry:**](#--industry-1)
 <!-- TOC END -->
 
 
@@ -74,20 +74,27 @@ date: 2021-05-01
 - [Link to the article](https://www.automation.com/en-us/articles/may-2021/dell-technologies-value-data-edge?listname=Automation%20&%20Control%20News%20&%20Articles)
 
 
-#### [April 12th, 2021]
+#### [May 11th, 2021]
 
-##
+## 'K-메타버스' 키운다…닻 올린 MZ세대
 - **Industry:**
-- **Who:**
-- **What:**
-- **When:**
-- **Why:**
-- **How:**
-- **So?:**
+- **What:** MZ세대 사이에서 '메타버스' 열풍이 거세다 - 코로나 19로 가상현실의 생활화가 앞당겨지고 있다.
+  - **메타버스는** '가상(Meta)'과 '우주(Universe)'의 합성어로, 가상공간에 사람들과 콘텐츠가 모여, 그 안에서 현실세계와 다름없이 삶을 살아갈 수 있다.
+- **When:**  코로나19가 시작된 2019년 이후
+- **Why:**  코로나19로 비대면화가 급속히 진행되면서, 교육·의료·공연 등 산업에서 **일방 소통을 넘어 상호작용이 가능한 메타버스와 같은 디지털 공간 활용**에 대한 관심이 높아지고 있다.
+  - 또한, 메타버스 핵심 기술인 **AR·VR** 등을 통칭하는 XR이 성숙단계로 접어들면서 관련 시장이 함께 성장하고 있다.
+  - 메타버스가 중요한 이유는, AR, VR의 개발이 가장 중요하게 적용되는 분야이기 때문 - 상호작용을 하며 위치, 역사적 정보를 수집하고 이 정보를 가장 연관있는 실제 세계에 내놓는것이기 때문에 중요하다.
+- **How:** 온라인 가상공간에서 아바타의 모습으로 돈을 벌고 소비하고 놀거나, 일까지 하는 등 **현실활동을 그대로 실행할 수 있는 플랫폼이** 인기를 끌고 있다.
+  - 특히, 기업에서도 채용설명회나 업무 회의 등을 메타버스를 통해 진행하면서 빠르게 확산되고 있다.
+  - 메타버스는** 게임, 엔터테인먼트 업계**에서 주로 놀이 창구로 활용되다가, 최근 **사회·경제 전반으로 확대되고 있는 추세**다. 게임 플랫폼 '로블록스'가 초기 메타버스 대표 기업인데, 미국에서 하루 평균 접속자만 4천만 명 육박할 정도로 인기를 끌고 있다. MS, 페이스북, 애플 등 글로벌 IT기업들이 메타버스 시대에 대비한 기술 개발에 한창이다.
+  - 최근에는 DGB금융지주의 경영진 회의가 '제페토'에서 진행됐다. 제페토 내 직접 맵을 제작하고 공개할 수 있는 서비스를 이용해, DGB금융지주 전용 맵을 제작했다. 맵에는 가상회의장, 포토타임 장소, 그룹 임직원을 위한 파티연회장 등을 만들었고, 경영진회의 참석자들이 직접 자신의 캐릭터를 생성한 이후 전용 맵에서 회의를 진행했다.
+  - 또 통신3사 중 SK텔레콤이 메타버스 사업에 적극적이다. 지난달 열린 '월드 IT쇼 2021'에서 ▲5G 메타버스 시네마 ▲메타버스 공간 '점프스튜디오' ▲메타버스 패션쇼, 트윈 월드(메타버스 컨퍼런스) ▲VR 기기 '오큘러스 퀘스트2' 등 메타버스 관련 기술을 선보였다.
+- **So?:** 업계 관계자는 "게임 등에서 재미·흥미 요소에 국한됐던 메타버스가 일상, 업무등 경제 사회 전반으로 확대되고 있다"면서, "메타버스 플랫폼 사업자가 엔터, 게임 등 IP사업자와 활발한 제휴를 통해 수익창출 기회를 확대하는 등 앞으로 성장이 기대되는 분야다"고 밝혔다.
+  - 정보통신산업진흥원은 글로벌 XR시장규모는 2019년 78억 9천달러(약 8조 5천600억원)에서 오는 2024년 1천368억 달러(약 150조 3천400억원)로 5년간 연평균 76.9% 성장할 것이라 전망했다.
 - **적용할점**
-  - **직무/자소서 연관성**:
-  - **산업 연관성**:
-- [Link to the article]()
+  - **산업 연관성**: 요새의 신기술 - 디지털 트윈, 메타버스 등은 현실세계를 디지털로 모델링해 새로운 경험을 부여하는것이 트렌드인것 같다. 멀게만 느껴지는 이러한 기술을 사회, 경제 전반으로 우리 일상에서 밀접하게 느껴볼 기회는 뭐가 있을까? 또한, 소비자가 메타버스에서 어떻게 행동하고, 소비하는지는 마케팅전략에 큰 지표가 될것이다.
+- [Link to the article](https://news.naver.com/main/read.nhn?mode=LSD&mid=shm&sid1=105&oid=031&aid=0000597774)
+- [Link 2 - Forbes](https://www.forbes.com/sites/cathyhackl/2020/07/05/the-metaverse-is-coming--its-a-very-big-deal/?sh=2321f5d3440f)
 
 
 #### [April 12th, 2021]
