Rename category name to incorporate wider topics

--- a/_posts/IT Trends/2020-07-15-Papers-2.md
+++ b/_posts/IT Trends/2020-07-15-Papers-2.md
@@ -1,8 +1,8 @@
 ---
 title: "Trends, Problems And Solutions of Recommender System"
-tags: [CS Papers]
+tags: 
 categories:
-  - CS Papers
+  -  IT Trends
 date: 2020-07-16
 ---
 
