--- a/_posts/IT Trends/2020-11-26-Papers-3.md
+++ b/_posts/IT Trends/2020-11-26-Papers-3.md
@@ -2,7 +2,7 @@
 title: "Security Issues of Edge Computing"
 tags: [Edge Computing]
 categories:
-  - CS Papers
+  - IT Trends
 date: 2020-11-26
 ---
 
