--- a/_posts/IT Trends/2020-11-27-Papers-4.md
+++ b/_posts/IT Trends/2020-11-27-Papers-4.md
@@ -2,7 +2,7 @@
 title: "Edge computing security risks and how to overcome them"
 tags: [Edge Computing]
 categories:
-  - CS Papers
+  -  IT Trends
 date: 2020-11-27
 ---
 
