--- a/_posts/IT Trends/2021-03-22-Papers-5.md
+++ b/_posts/IT Trends/2021-03-22-Papers-5.md
@@ -2,7 +2,7 @@
 title: "5G와 엣지 컴퓨팅의 만남, '비즈니스 혁신' 어떻게 이끌어 낼까 - 5G and Edge Computing - The road to Digital Transformation"
 tags: [Edge Computing]
 categories:
-  - CS Papers
+  -  IT Trends
 ---
 
 
