--- a/_posts/IT Trends/2021-03-22-Papers-7.md
+++ b/_posts/IT Trends/2021-03-22-Papers-7.md
@@ -2,7 +2,7 @@
 title: "Making 5G Enterprise Real- 5G를 통한 기업의 혁신"
 tags: [Edge Computing]
 categories:
-  - CS Papers
+  -  IT Trends
 date: 2021-03-22
 ---
 
