Revert "Rename category name to incorporate wider topics"
This reverts commit e18f6f95041c08a3c825553b18febac8ec4656b7.

--- a/_posts/CS Papers/2020-07-15-Papers-2.md
+++ b/_posts/CS Papers/2020-07-15-Papers-2.md
@@ -1,8 +1,8 @@
 ---
 title: "Trends, Problems And Solutions of Recommender System"
-tags: 
+tags: [CS Papers]
 categories:
-  -  IT Trends
+  - CS Papers
 date: 2020-07-16
 ---
 
