--- a/_posts/CS Papers/2021-03-22-Papers-7.md
+++ b/_posts/CS Papers/2021-03-22-Papers-7.md
@@ -2,7 +2,7 @@
 title: "Making 5G Enterprise Real- 5G를 통한 기업의 혁신"
 tags: [Edge Computing]
 categories:
-  -  IT Trends
+  - CS Papers
 date: 2021-03-22
 ---
 
