--- a/_posts/CS Papers/2021-05-04-Papers-8.md
+++ b/_posts/CS Papers/2021-05-04-Papers-8.md
@@ -2,7 +2,7 @@
 title: "뉴노멀 시대, 인텔리전스 업무 자동화 전략 - 엔터프라이즈 등급 지능형 자동화의 특징과 사례"
 tags:
 categories:
-  -  IT Trends
+  - CS Papers
 ---
 
 <!-- TOC START min:1 max:3 link:true asterisk:false update:true -->
