--- a/_posts/CS Papers/2020-11-26-Papers-3.md
+++ b/_posts/CS Papers/2020-11-26-Papers-3.md
@@ -2,7 +2,7 @@
 title: "Security Issues of Edge Computing"
 tags: [Edge Computing]
 categories:
-  - IT Trends
+  - CS Papers
 date: 2020-11-26
 ---
 
