--- a/_posts/CS Papers/2020-11-27-Papers-4.md
+++ b/_posts/CS Papers/2020-11-27-Papers-4.md
@@ -2,7 +2,7 @@
 title: "Edge computing security risks and how to overcome them"
 tags: [Edge Computing]
 categories:
-  -  IT Trends
+  - CS Papers
 date: 2020-11-27
 ---
 
