Add news about digital twin in EVs

--- a/_posts/Daily Tech News/2021-05-01-News-May.md
+++ b/_posts/Daily Tech News/2021-05-01-News-May.md
@@ -11,7 +11,10 @@ date: 2021-05-01
   - [오케스트로, KETI와 차세대 AI옵스 기술 개발](#오케스트로-keti와-차세대-ai옵스-기술-개발)
   - [Dell Technologies Unlocks Value of Data at the Edge](#dell-technologies-unlocks-value-of-data-at-the-edge)
   - ['K-메타버스' 키운다…닻 올린 MZ세대](#k-메타버스-키운다닻-올린-mz세대)
+  - [Using Digital Twin Technology to Accelerate Vehicle Electrification](#using-digital-twin-technology-to-accelerate-vehicle-electrification)
   - [- **Industry:**](#--industry)
+  - [- **Industry:**](#--industry-1)
+  - [- **Industry:**](#--industry-2)
 <!-- TOC END -->
 
 
@@ -97,6 +100,24 @@ date: 2021-05-01
 - [Link 2 - Forbes](https://www.forbes.com/sites/cathyhackl/2020/07/05/the-metaverse-is-coming--its-a-very-big-deal/?sh=2321f5d3440f)
 
 
+#### [May 17th, 2021]
+
+## Using Digital Twin Technology to Accelerate Vehicle Electrification
+
+- **Industry:**  디지털 워크스페이스
+- **What:**  Digital Twin technology is being implemented to speed up vehicle electrification.
+  - **Digital twin** is a new way of thinking about consolidating and coordinating product lifecycle management - it allows for a more efficient design process that allows engineers to develop prototypes faster.
+- **Why:**  Strict environmental regulations are being implemented and consumers are being encouraged to transition to more eco-friendly vehicles (EVs) & the use of autonomous vehicles has increased - both these actors have reshaped vehicle engineering processes and methods.
+- **How:**  
+  - Implementing digital twins of hybrid and EVs allows manufacturers to **optimize EV performance engineering thus accelerating product design**
+  - It also enables them to **virtually assess the overall performance** of the vehicle’s battery, motor, and power electronics and explore the balance of performance attributes, such as drivability, range, safety, aerodynamics, and thermal and energy management.
+  -  The technology also allows manufacturers to physically validate components and architecture choices.
+- **So?:**  Electric vehicle manufacturer e.Go is working on developing a factory that is powered by connected machines and a private 5G network - the digital twin controls the factory; it colelcts data, schedules parts to arrive exactly when needed, manages tools used by human workers, etc.
+  - Unlocking Digital Twin's full potential will need seamless integration, alignment, and best practices for hardware and software infrastructure.
+- **적용할점**
+  - **산업 연관성**: 디지털 트윈 자체의 유지보수는 어떻게 이루어지는지, 초기 프로그래밍은 어떻게 구축/ 설계되는지? 장기적으로도 계속 도움되는 케이슨지, 그런 사례가 있는지?
+- [Link to the article](https://www.azocleantech.com/article.aspx?ArticleID=1225)
+
 #### [May 12th, 2021]
 
 ##
@@ -108,6 +129,33 @@ date: 2021-05-01
 - **How:**
 - **So?:**
 - **적용할점**
-  - **직무/자소서 연관성**:
+  - **산업 연관성**:
+- [Link to the article]()
+
+#### [May 12th, 2021]
+
+##
+- **Industry:**
+- **Who:**
+- **What:**
+- **When:**
+- **Why:**
+- **How:**
+- **So?:**
+- **적용할점**
+  - **산업 연관성**:
+- [Link to the article]()
+
+#### [May 12th, 2021]
+
+##
+- **Industry:**
+- **Who:**
+- **What:**
+- **When:**
+- **Why:**
+- **How:**
+- **So?:**
+- **적용할점**
   - **산업 연관성**:
 - [Link to the article]()
