--- a/_posts/Daily Tech News/2022-03-01-News-Mar.md
+++ b/_posts/Daily Tech News/2022-03-01-News-Mar.md
@@ -30,8 +30,27 @@ date: 2022-03-01
 - **So?:**
   - Google is aware of the effect it will have on customers, but they noted that customers should 'adapt their current usage to better align their applications to these new business models.'
   - Most developers are not amused by this increase.
-- **Comment**:In the era where infrastructure companies are fighting for a cheaper, better and more flexible storage services, I thought it was interesting that Google is taking this shift. Got me thinking, would it still be competitive against AWS? Azure? Cloudfare? etc. From someone who works at an infrastructure company it was interesting to see how the cloud market is also changing its pricing model/ business development strategy, etc.
+- **Comments**:In the era where infrastructure companies are fighting for a cheaper, better and more flexible storage services, I thought it was interesting that Google is taking this shift. Got me thinking, would it still be competitive against AWS? Azure? Cloudfare? etc. From someone who works at an infrastructure company it was interesting to see how the cloud market is also changing its pricing model/ business development strategy, etc.
 - [Link to the article](https://techcrunch.com/2022/03/14/inflation-is-real-google-cloud-raises-its-storage-prices/)
+
+
+#### [March 18th, 2022]
+
+## How the shift to edge computing is impacting enterprises
+- **Industry:** Edge Computing
+- **What:** Edge computing has increasingly become a priority for a growing number of organizations. This has equaled exponential growth in the number of providers as well. 
+  - Established providers of edge computing platforms and services include **Cloudflare, Macrometa, Platform9 and Litmus Edge**. 
+  - Amazon Web Services (AWS): Lambda@Edge technology
+  - IBM: Watson Anywhere
+  - Other IT vendors, from Google, to Dell, to Hewlett-Packard Enterprise (HPE) have announced plans to provide some sort of multiple edge computing platform.
+  - Couchbase: A distributed NoSQL cloud database, which allows developers to build native applications in the cloud, at the edge and on mobile IoT devices 
+- **Why:** 
+  - The reason why edge is becoming so popular is because it helps address use cases that cloud cant - performance related limitations.
+  - The shift to a more distributed computing model is also due to the expansion of IoT and AI applications. 
+- **How:** By moving data closer to where it is being used, even when it is in motion. Different providers are coming up with various services and platforms to cater for the needs. 
+- **So?:** According to IDC, worldwide enterprise and service provider spending on edge hardware, software and serves is expected to hit $176 billion in 2022, representing a 14.8% increase over 2021. 
+- **Comments**: Was primarily an ad for couchbase, but it was refreshing to see the continuous growth for needs for edge computing. The edge hw and sw does seem very promising? 
+- [Link to the article](https://venturebeat.com/2022/03/10/how-the-shift-to-edge-computing-is-impacting-enterprises/)
 
 
 #### [March 16th, 2022]
@@ -44,8 +63,7 @@ date: 2022-03-01
 - **Why:**
 - **How:**
 - **So?:**
-- **적용할점**
-  - **Comment**:
+- **Comments**:
 - [Link to the article]()
 
 
@@ -59,6 +77,34 @@ date: 2022-03-01
 - **Why:**
 - **How:**
 - **So?:**
-- **적용할점**
-  - **Comment**:
+- **Comments**:
+- [Link to the article]()
+
+ 
+
+#### [March 16th, 2022]
+
+##
+- **Industry:**
+- **Who:**
+- **What:**
+- **When:**
+- **Why:**
+- **How:**
+- **So?:**
+- **Comments**:
+- [Link to the article]()
+
+
+#### [March 16th, 2022]
+
+##
+- **Industry:**
+- **Who:**
+- **What:**
+- **When:**
+- **Why:**
+- **How:**
+- **So?:**
+- **Comments**:
 - [Link to the article]()
