News for mar 21st

--- a/_posts/Daily Tech News/2022-03-01-News-Mar.md
+++ b/_posts/Daily Tech News/2022-03-01-News-Mar.md
@@ -7,9 +7,9 @@ date: 2022-03-01
 ---
 
 <!-- TOC START min:1 max:3 link:true asterisk:false update:true -->
-  - [NFTs Are Coming to Instagram, Zuckerberg Says](#nfts-are-coming-to-instagram-zuckerberg-says)
-  - [NFTs](#nfts)
-  - [- **Industry:**](#--industry)
+  - [NFTs Are Coming to Instagram, Zuckerberg Says](#nfts-are-coming-to-instagram-zuckerberg-says) 
+  - [How the shift to edge computing is impacting enterprises](#how-the-shift-to-edge-computing-is-impacting-enterprises)
+  - [How AI will change the data center and the IT workforce](#how-ai-will-change-the-data-center-and-the-it-workforce)
 <!-- TOC END -->
 
 
@@ -30,7 +30,7 @@ date: 2022-03-01
 - **So?:**
   - Google is aware of the effect it will have on customers, but they noted that customers should 'adapt their current usage to better align their applications to these new business models.'
   - Most developers are not amused by this increase.
-- **Comments**:In the era where infrastructure companies are fighting for a cheaper, better and more flexible storage services, I thought it was interesting that Google is taking this shift. Got me thinking, would it still be competitive against AWS? Azure? Cloudfare? etc. From someone who works at an infrastructure company it was interesting to see how the cloud market is also changing its pricing model/ business development strategy, etc.
+- **Comments:** In the era where infrastructure companies are fighting for a cheaper, better and more flexible storage services, I thought it was interesting that Google is taking this shift. Got me thinking, would it still be competitive against AWS? Azure? Cloudfare? etc. From someone who works at an infrastructure company it was interesting to see how the cloud market is also changing its pricing model/ business development strategy, etc.
 - [Link to the article](https://techcrunch.com/2022/03/14/inflation-is-real-google-cloud-raises-its-storage-prices/)
 
 
@@ -49,10 +49,29 @@ date: 2022-03-01
   - The shift to a more distributed computing model is also due to the expansion of IoT and AI applications. 
 - **How:** By moving data closer to where it is being used, even when it is in motion. Different providers are coming up with various services and platforms to cater for the needs. 
 - **So?:** According to IDC, worldwide enterprise and service provider spending on edge hardware, software and serves is expected to hit $176 billion in 2022, representing a 14.8% increase over 2021. 
-- **Comments**: Was primarily an ad for couchbase, but it was refreshing to see the continuous growth for needs for edge computing. The edge hw and sw does seem very promising? 
+- **Comments:** Was primarily an ad for couchbase, but it was refreshing to see the continuous growth for needs for edge computing. The edge hw and sw does seem very promising? 
 - [Link to the article](https://venturebeat.com/2022/03/10/how-the-shift-to-edge-computing-is-impacting-enterprises/)
 
 
+#### [March 21th, 2022]
+
+## How AI will change the data center and the IT workforce
+- **Industry:** IT
+- **What:** With AI, data center will become leaner, less costly to operate, and achieve higher performance metrics.
+  - Things like load management, power and resource consumption and security 
+- **Why:** 
+  - The pure cost of the DC operation, ineffective human resource used for repetitive tasks, and due to a combination of mistrust, lack of skillsets and the potential risk for disruption.
+  - Also due to the transition from big data to small and wide data will be in full swing, and this will put pressure on data centers to become more flexible and less costly to operate.
+- **How:** Much of what is done by human operators will be automated by AI.
+- **So?:** 
+  - IT job growth - In fact, data center will likely face a continued worker shortasge - although AI is expected to execute rote, repetitive tasks of data and infra management. 
+  - The challenge: managing the growth of data loads while maintaining consistensicy an controlling costs - AI can assist, but cannot do it on own. 
+  - But much of the physical infra is sill not ready for change - Gartner report noted that much of the mechanical infra is still lacking the sensor-driven monitoring capabilities, hence it might need a manual footing for a few more years. 
+  - Continued job shortages will likely drive salaries up, particularly for those who have augmented their resumes with AI skillsets,
+- **Comments:** It was refreshing to see a new perspective - Ive seen a LOT of articles stating that AI will replace human workforce, but what i overlooked was whether the physical infrastructure was ready. Ive never thought about the fact that the machines might not be sensor-equipped. Just like any other articles tho,its important to have yourself equipped to the skillsets and demands of the industry. May be a good chance for me to reflect on myself.
+- [Link to the article](https://venturebeat.com/2022/03/18/how-ai-will-change-the-data-center-and-the-it-workforce/)
+
+
 #### [March 16th, 2022]
 
 ##
@@ -63,21 +82,7 @@ date: 2022-03-01
 - **Why:**
 - **How:**
 - **So?:**
-- **Comments**:
-- [Link to the article]()
-
-
-#### [March 16th, 2022]
-
-##
-- **Industry:**
-- **Who:**
-- **What:**
-- **When:**
-- **Why:**
-- **How:**
-- **So?:**
-- **Comments**:
+- **Comments:**
 - [Link to the article]()
 
  
@@ -92,7 +97,7 @@ date: 2022-03-01
 - **Why:**
 - **How:**
 - **So?:**
-- **Comments**:
+- **Comments:**
 - [Link to the article]()
 
 
@@ -106,5 +111,5 @@ date: 2022-03-01
 - **Why:**
 - **How:**
 - **So?:**
-- **Comments**:
+- **Comments:**
 - [Link to the article]()
